--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
 
+	* globals.sh, memo.in: Added a function checking whether memo.rc
+	exists.
+
+2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
+
 	* general.sh, receiving.sh, sending.sh: Removed redundant includes.
 
 2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
