--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
+
+	* libmemo/libmemo.h: Added some structs and function headers.
+
 2008-11-24  Jan Stępień <jstepien@users.sourceforge.net>
 
 	* receiving.sh: Sending a report after receiving a reply.
