--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
 
+	* Doxyfile.in: Added Doxyfile.in (to be parsed by configure).
+
+2008-11-28  Jan Stępień <jstepien@users.sourceforge.net>
+
 	* libmemo/libmemo.h: Added some structs and function headers.
 
 2008-11-24  Jan Stępień <jstepien@users.sourceforge.net>
