--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
 
+	* Makefile.am: Added ACLOCAL_AMFLAGS=-I m4
+
+2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
+
 	* Makefile.am, configure.ac: Tests are now optional, indent clean up.
 	Pass --enable-tests to configure in order to enable tests in test
 	subdirectory.
