--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
 
+	* Makefile.am, configure.ac, test/Makefile.am: Added support for
+	Check. Substituded --enable-tests with --with-check, added Check's
+	flags to CFLAGS and LDFLAGS in test directory.
+
+2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
+
 	* Makefile.am: Added ACLOCAL_AMFLAGS=-I m4
 
 2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
