--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
 
+	* test/Makefile.am, test/basic_database_test.c, test/tests.c: Added
+	the first Check test.
+
+2008-11-29  Jan Stępień <jstepien@users.sourceforge.net>
+
 	* Makefile.am, configure.ac, test/Makefile.am: Added support for
 	Check. Substituded --enable-tests with --with-check, added Check's
 	flags to CFLAGS and LDFLAGS in test directory.
