--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
+
+	* libmemo/tests.c, libmemo/database.h, libmemo/libmemo.h,
+	libmemo/macros.h, libmemo/word.c: Communication with the database is
+	handled by memo_word structures and related functions. The new design
+	follows the active record pattern.
+
 2008-12-23  Jan Stępień <jstepien@users.sourceforge.net>
 
 	* libmemo/database.c: memo_database_add_word passes the test listed in the
