--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
 
+	* libmemo/word.c: memo_word_free frees everything it ought to, including
+	the list of word's translations.
+
+2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
+
 	* libmemo/tests.c, libmemo/database.h, libmemo/libmemo.h,
 	libmemo/macros.h, libmemo/word.c: Communication with the database is
 	handled by memo_word structures and related functions. The new design
