--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
 
+	* libmemo/database.c, libmemo/database.h: Strings stored in
+	memo_database_data are freed by memo_database_data_free function.
+
+2009-01-06  Jan Stępień <jstepien@users.sourceforge.net>
+
 	* libmemo/Makefile.am, libmemo/database.c, libmemo/word.c,
 	libmemo/xmalloc.c, libmemo/xmalloc.h: Created x{m,re,c}alloc error
 	checking memory allocation functions and replaced existing {m,re,c}alloc
