Added year 2009 to copyright lines.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This is the README file for Memo.
 
-  Copyright (C) 2008 Jan Stępień
+  Copyright (C) 2008, 2009 Jan Stępień
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
