--- a/doc/memo.texi
+++ b/doc/memo.texi
@@ -95,7 +95,7 @@ memo_database_execute(memo_database db, const char *query,
 @node Copyrights
 @appendix Copyrights
 
-Copyright @copyright{} @ 2008 Jan Stępień.
+Copyright @copyright{} @ 2008, 2009 Jan Stępień.
 
 Permission is granted to copy, distribute and/or modify this document under
 the terms of the GNU Free Documentation License, Version 1.3 or any later
