--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2009-01-17  Jan Stępień <jstepien@users.sourceforge.net>
+
+	* src/main.c: Found another place to use die function.
+
+2009-01-17  Jan Stępień <jstepien@users.sourceforge.net>
+
+	* common/Makefile.am, libmemo/Makefile.am, src/Makefile.am: Renamed
+	libxmalloc to libcommon. It's not only xmalloc's family's library now,
+	as it also contains die function and may be used for other functions in
+	future.
+
+2009-01-16  Jan Stępień <jstepien@users.sourceforge.net>
+
+	* common/Makefile.am, common/messages.c, common/messages.h: New,
+	indispensable function: die.
+	* src/main.c: New function: add_pair, called using --add-pair.
+
 2009-01-13  Jan Stępień <jstepien@users.sourceforge.net>
 
 	* src/main.c: Changed option -> action assignment in arguments parsing.
